Saved Jupyter notebook 'StabilitySelection_SMOGNED_XGB_Plots'

--- a/ipython_notebooks/StabilitySelection_SMOGNED_XGB_Plots.ipynb
+++ b/ipython_notebooks/StabilitySelection_SMOGNED_XGB_Plots.ipynb
@@ -80,13 +80,11 @@
       ]
     },
     {
-      "execution_count": 0,
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
-        ""
-      ],
-      "outputs": []
+        "# Predict vs A"
+      ]
     }
   ]
 }
