Saved Jupyter notebook 'StabilitySelection_SMOGNED_XGB_Plots'

--- a/ipython_notebooks/StabilitySelection_SMOGNED_XGB_Plots.ipynb
+++ b/ipython_notebooks/StabilitySelection_SMOGNED_XGB_Plots.ipynb
@@ -112,7 +112,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "import seaborn as sns\nx \u003d XGB_Outputs_topn_df.VFD\ny1 \u003d XGB_Outputs_topn_df.prediction\nplt.rcParams.update({\u0027figure.figsize\u0027:(10,8), \u0027figure.dpi\u0027:100})\nsns.jointplot(x\u003dx,y\u003dy1);"
       ],
       "outputs": []
     }
